@@ -35,11 +35,14 @@ public class PKUpgradeColumnImpl extends BaseUpgradeColumnImpl {
 
 		super(name, oldColumnType);
 
-		_newColumnType = new Integer(Types.BIGINT);
+		_newColumnType = Integer.valueOf(Types.BIGINT);
 		_trackValues = trackValues;
 
 		if (_trackValues) {
 			_valueMapper = ValueMapperFactoryUtil.getValueMapper();
+		}
+		else {
+			_valueMapper = null;
 		}
 	}
 
@@ -50,7 +53,7 @@ public class PKUpgradeColumnImpl extends BaseUpgradeColumnImpl {
 
 	@Override
 	public Object getNewValue(Object oldValue) throws Exception {
-		Long newValue = new Long(increment());
+		Long newValue = Long.valueOf(increment());
 
 		if (_trackValues) {
 			_valueMapper.mapValue(oldValue, newValue);
@@ -67,8 +70,8 @@ public class PKUpgradeColumnImpl extends BaseUpgradeColumnImpl {
 		return _trackValues;
 	}
 
-	private Integer _newColumnType;
-	private boolean _trackValues;
-	private ValueMapper _valueMapper;
+	private final Integer _newColumnType;
+	private final boolean _trackValues;
+	private final ValueMapper _valueMapper;
 
 }
