@@ -14,21 +14,20 @@
 
 package com.liferay.portlet.usersadmin.search;
 
-import com.liferay.portal.NoSuchCountryException;
-import com.liferay.portal.NoSuchRegionException;
 import com.liferay.portal.kernel.dao.search.DAOParamUtil;
+import com.liferay.portal.kernel.exception.NoSuchCountryException;
+import com.liferay.portal.kernel.exception.NoSuchRegionException;
 import com.liferay.portal.kernel.exception.PortalException;
-import com.liferay.portal.kernel.exception.SystemException;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
+import com.liferay.portal.kernel.model.Country;
+import com.liferay.portal.kernel.model.Region;
+import com.liferay.portal.kernel.service.CountryServiceUtil;
+import com.liferay.portal.kernel.service.RegionServiceUtil;
 import com.liferay.portal.kernel.util.ParamUtil;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.model.Country;
-import com.liferay.portal.model.Region;
-import com.liferay.portal.service.CountryServiceUtil;
-import com.liferay.portal.service.RegionServiceUtil;
 
 import javax.portlet.PortletRequest;
 
@@ -57,11 +56,11 @@ public class OrganizationSearchTerms extends OrganizationDisplayTerms {
 			return null;
 		}
 		else {
-			return new Long(countryId);
+			return Long.valueOf(countryId);
 		}
 	}
 
-	public String getCountryName() throws PortalException, SystemException {
+	public String getCountryName() throws PortalException {
 		String countryName = null;
 
 		if (countryId != 0) {
@@ -87,11 +86,11 @@ public class OrganizationSearchTerms extends OrganizationDisplayTerms {
 			return null;
 		}
 		else {
-			return new Long(regionId);
+			return Long.valueOf(regionId);
 		}
 	}
 
-	public String getRegionName() throws PortalException, SystemException {
+	public String getRegionName() throws PortalException {
 		String regionName = null;
 
 		if (regionId != 0) {
@@ -131,7 +130,7 @@ public class OrganizationSearchTerms extends OrganizationDisplayTerms {
 		return false;
 	}
 
-	private static Log _log = LogFactoryUtil.getLog(
+	private static final Log _log = LogFactoryUtil.getLog(
 		OrganizationSearchTerms.class);
 
 }
